--- a/index.html
+++ b/index.html
@@ -1,43 +1,149 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Xander313 - Presentación</title>
-  <style>
+<meta charset="UTF-8">
+<title>Curriculum Vitae - Xander313</title>
+<style>
     body {
-      background: #0d1117;
-      color: #e6edf3;
-      font-family: Arial, sans-serif;
-      padding: 40px;
-      line-height: 1.6;
+        font-family: Arial, sans-serif;
+        background: #0d1117;
+        color: #e6edf3;
+        margin: 0;
+        padding: 40px;
+        line-height: 1.6;
     }
-    h1 { color: #00eaff; }
-    .card {
-      background: #161b22;
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 600px;
+    h1, h2, h3 { color: #00eaff; }
+    .section {
+        background: #161b22;
+        padding: 20px;
+        border-radius: 10px;
+        margin-bottom: 25px;
     }
-  </style>
+    a { color: #58a6ff; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    ul { margin-top: 0; }
+</style>
 </head>
 <body>
 
-  <h1>👋 Hola, soy Xander313</h1>
-  <div class="card">
-    <h2>Desarrollador de Software</h2>
+<h1>Curriculum Vitae</h1>
+<h2>Jhonn Alex Roldán Daquilema (Xander313)</h2>
+
+<!-- ============================
+      SECCIÓN: DATOS PERSONALES
+=============================== -->
+<div class="section">
+    <h3>Datos Personales</h3>
+    <p><strong>Nombre:</strong> Jhonn Alex Roldán Daquilema</p>
+    <p><strong>Email:</strong> (tu email aquí)</p>
+    <p><strong>Teléfono:</strong> (tu número aquí)</p>
+    <p><strong>Dirección:</strong> (tu ciudad aquí)</p>
+    <p><strong>GitHub:</strong> <a href="https://github.com/Xander313" target="_blank">github.com/Xander313</a></p>
+</div>
+
+<!-- ============================
+      SECCIÓN: PERFIL PROFESIONAL
+=============================== -->
+<div class="section">
+    <h3>Perfil Profesional</h3>
     <p>
-      Bienvenido a mi sitio personal alojado en GitHub Pages.  
-      Aquí compartiré mis proyectos, investigaciones y avances en tecnología:
+        Estudiante y desarrollador en formación de la carrera de Ingeniería en Sistemas de Información  
+        en la Universidad Técnica de Cotopaxi. Con experiencia desarrollando soluciones software, aplicaciones web,
+        sistemas IoT, SIG, microservicios y automatización.  
+        Motivado por la innovación tecnológica y la creación de herramientas que generen impacto social.
     </p>
+</div>
+
+<!-- ============================
+      SECCIÓN: FORMACIÓN
+=============================== -->
+<div class="section">
+    <h3>Formación Académica</h3>
+
+    <h4>🎓 Ingeniería en Sistemas de Información – Universidad Técnica de Cotopaxi</h4>
+    <p><em>Asignaturas relevantes (según malla curricular):</em></p>
     <ul>
-      <li>💧 Sistemas IoT (monitoreo hídrico con ESP32)</li>
-      <li>🛰️ Sistemas SIG y mapas interactivos</li>
-      <li>📱 Aplicaciones Flutter</li>
-      <li>🌐 Desarrollo con Laravel, Django y ASP.NET</li>
-      <li>🧠 Aprendizaje automático y modelos ML</li>
+        <li>Fundamentos e Ingeniería de Software</li>
+        <li>Programación Estructurada y Orientada a Objetos</li>
+        <li>Desarrollo y Aplicaciones Web</li>
+        <li>Redes de Transmisión de Datos y Sistemas Distribuidos</li>
+        <li>Minería de Datos y Web Mining</li>
+        <li>Aplicación con Base de Datos</li>
+        <li>Inteligencia Artificial</li>
+        <li>Gestión de la Información</li>
+        <li>Control y Auditoría Informática</li>
+        <li>Computación en la Nube, Arquitectura y Seguridad</li>
+        <li>Sistemas Operativos y Configuración de Servicios</li>
     </ul>
-    <p>✨ Pronto agregaré más contenido.</p>
-  </div>
+    <p><small>Fuente: Malla curricular de Ingeniería en Sistemas de Información UTC :contentReference[oaicite:1]{index=1}</small></p>
+
+    <h4>🏫 Estudios Secundarios</h4>
+    <p>(Aquí colocas el nombre de tu colegio, año de graduación, especialidad si aplica)</p>
+</div>
+
+<!-- ============================
+      SECCIÓN: PROYECTOS
+=============================== -->
+<div class="section">
+    <h3>Proyectos Desarrollados</h3>
+    <p>A continuación, algunos de los proyectos publicados en GitHub:</p>
+
+    <ul>
+        <li><a href="https://github.com/Xander313/sw_coacmlp" target="_blank">sw_coacmlp</a></li>
+        <li><a href="https://github.com/Xander313/BI" target="_blank">BI (Business Intelligence)</a></li>
+        <li><a href="https://github.com/Xander313/SIGGrupo13" target="_blank">SIGGrupo13 – Sistema Geográfico</a></li>
+        <li><a href="https://github.com/Xander313/proyecto25" target="_blank">proyecto25</a></li>
+        <li><a href="https://github.com/Xander313/HydroSys" target="_blank">HydroSys (IoT Agua + ESP32)</a></li>
+        <li><a href="https://github.com/Xander313/cloudWork" target="_blank">cloudWork</a></li>
+        <li><a href="https://github.com/Xander313/propiedadIntelectual" target="_blank">Sistema Propiedad Intelectual</a></li>
+        <li><a href="https://github.com/Xander313/SIGTurismo" target="_blank">SIGTurismo</a></li>
+        <li><a href="https://github.com/Xander313/finalProjectWeb" target="_blank">finalProjectWeb</a></li>
+        <li><a href="https://github.com/Xander313/awsCloud" target="_blank">awsCloud</a></li>
+        <li><a href="https://github.com/Xander313/ASPDOTNETDJANGO" target="_blank">ASPDOTNET + Django</a></li>
+        <li><a href="https://github.com/Xander313/11" target="_blank">11</a></li>
+        <li><a href="https://github.com/Xander313/Logistica" target="_blank">Logística</a></li>
+        <li><a href="https://github.com/Xander313/Geolocalizacion" target="_blank">Geolocalización</a></li>
+        <li><a href="https://github.com/Xander313/ejercicio44" target="_blank">ejercicio44</a></li>
+        <li><a href="https://github.com/Xander313/cloud" target="_blank">cloud</a></li>
+        <li><a href="https://github.com/Xander313/ejercicio25" target="_blank">ejercicio25</a></li>
+    </ul>
+
+    <p><strong>GitHub completo:</strong>  
+    <a href="https://github.com/Xander313" target="_blank">github.com/Xander313</a></p>
+</div>
+
+<!-- ============================
+      SECCIÓN: ARTÍCULO PUBLICADO
+=============================== -->
+<div class="section">
+    <h3>Artículo Publicado</h3>
+    <p><strong>Título:</strong> Desafíos en el desarrollo vial y su impacto comunitario en la parroquia El Chaupi, Ecuador</p>
+
+    <p><strong>Autores:</strong><br>
+    Jhonn Alex Roldan Daquilema<br>
+    Diego Johnathan Telenchana Punina<br>
+    Eddy Álvaro Lucero Tipán<br>
+    Nashely Mikaela Betancourt Toscano<br>
+    GAD Parroquial El Chaupi
+    </p>
+
+    <p><strong>Publicado en:</strong> <a href="https://investigacion.utc.edu.ec/index.php/ciya/article/view/1060" target="_blank">CIYA – Ciencia e Investigación Aplicada</a></p>
+</div>
+
+<!-- ============================
+      SECCIÓN: HABILIDADES
+=============================== -->
+<div class="section">
+    <h3>Habilidades Técnicas</h3>
+    <ul>
+        <li>Desarrollo Web: HTML, CSS, JS, Django, Laravel, ASP.NET</li>
+        <li>IoT: ESP32, sensores, protocolos MQTT/HTTP</li>
+        <li>Bases de datos: MySQL, PostgreSQL, SQL Server</li>
+        <li>Cloud: AWS, Docker, Docker Compose</li>
+        <li>Movil: Flutter</li>
+        <li>Data: Python, Machine Learning básico</li>
+    </ul>
+</div>
 
 </body>
 </html>
