--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
         border-radius: 10px;
         margin-bottom: 25px;
     }
+
+
+
+.header {
+    display: flex;
+    align-items: center;
+    gap: 20px; /* separación entre foto y texto */
+    margin-bottom: 30px;
+}
+
+.foto {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #00eaff;
+}
+
+    
     a { color: #58a6ff; text-decoration: none; }
     a:hover { text-decoration: underline; }
     ul { margin-top: 0; }
@@ -26,8 +45,15 @@
 </head>
 <body>
 
-<h1>Curriculum Vitae</h1>
-<h2>Jhonn Alex Roldán Daquilema (Xander313)</h2>
+<div class="header">
+    <img src="https://lh3.googleusercontent.com/a/ACg8ocKUm9x2cA6AM0q6u_kn9mNHhPaRsn0Pk7kNPg3seA8zKaBcwHI=s288-c-no" class="foto" alt="Foto de perfil">
+    
+    <div>
+        <h1>Curriculum Vitae</h1>
+        <h2>Jhonn Alex Roldán Daquilema (Xander313)</h2>
+    </div>
+</div>
+
 
 <!-- ============================
       SECCIÓN: DATOS PERSONALES
@@ -77,7 +103,7 @@
     </ul>
     <p><small>Fuente: Malla curricular de Ingeniería en Sistemas de Información UTC :contentReference[oaicite:1]{index=1}</small></p>
 
-    <h4>🏫 Estudios Secundarios</h4>
+    <h4>Estudios Secundarios</h4>
     <p>(Aquí colocas el nombre de tu colegio, año de graduación, especialidad si aplica)</p>
 </div>
 
@@ -92,20 +118,13 @@
         <li><a href="https://github.com/Xander313/sw_coacmlp" target="_blank">sw_coacmlp</a></li>
         <li><a href="https://github.com/Xander313/BI" target="_blank">BI (Business Intelligence)</a></li>
         <li><a href="https://github.com/Xander313/SIGGrupo13" target="_blank">SIGGrupo13 – Sistema Geográfico</a></li>
-        <li><a href="https://github.com/Xander313/proyecto25" target="_blank">proyecto25</a></li>
         <li><a href="https://github.com/Xander313/HydroSys" target="_blank">HydroSys (IoT Agua + ESP32)</a></li>
         <li><a href="https://github.com/Xander313/cloudWork" target="_blank">cloudWork</a></li>
         <li><a href="https://github.com/Xander313/propiedadIntelectual" target="_blank">Sistema Propiedad Intelectual</a></li>
         <li><a href="https://github.com/Xander313/SIGTurismo" target="_blank">SIGTurismo</a></li>
-        <li><a href="https://github.com/Xander313/finalProjectWeb" target="_blank">finalProjectWeb</a></li>
-        <li><a href="https://github.com/Xander313/awsCloud" target="_blank">awsCloud</a></li>
         <li><a href="https://github.com/Xander313/ASPDOTNETDJANGO" target="_blank">ASPDOTNET + Django</a></li>
-        <li><a href="https://github.com/Xander313/11" target="_blank">11</a></li>
-        <li><a href="https://github.com/Xander313/Logistica" target="_blank">Logística</a></li>
+        <li><a href="https://github.com/Xander313/Logistica" target="_blank">Regresión Logística</a></li>
         <li><a href="https://github.com/Xander313/Geolocalizacion" target="_blank">Geolocalización</a></li>
-        <li><a href="https://github.com/Xander313/ejercicio44" target="_blank">ejercicio44</a></li>
-        <li><a href="https://github.com/Xander313/cloud" target="_blank">cloud</a></li>
-        <li><a href="https://github.com/Xander313/ejercicio25" target="_blank">ejercicio25</a></li>
     </ul>
 
     <p><strong>GitHub completo:</strong>  
