--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 }
 
 /* ================== TITULOS =================== */
-h1, h2, h3 { color: #00eaff; }
+h1, h2, h3, p { color: #00eaff; }
 
 /* ================== CARDS PROYECTOS =================== */
 .proyecto-card {
