--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Curriculum Vitae - Xander313</title>
+<title>Curriculum Vitae</title>
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@ body {
 }
 
 /* ================== TITULOS =================== */
-h1, h2, h3, p { color: #00eaff; }
+h1, h2, h3 { color: #00eaff; }
 
 /* ================== CARDS PROYECTOS =================== */
 .proyecto-card {
@@ -166,15 +166,23 @@ h1, h2, h3, p { color: #00eaff; }
         <li>Minería de Datos e Inteligencia Artificial</li>
     </ul>
 
-    <h4>🏫 Estudios Secundarios</h4>
-    <p>Bachillerato en (ingresa aquí la especialidad).</p>
+<h4>Estudios Secundarios</h4>
+<p>
+    Titulado como <strong>Bachiller Técnico en Contabilidad y Tributación</strong>  
+    en el <strong>Colegio Nacional Técnico Ismael Proaño Andrade</strong>  
+    (2018–2021).  
+    Formación con énfasis en procesos contables, normativa tributaria, registros financieros,
+    elaboración de reportes y fundamentos administrativos que fortalecen mi perfil analítico
+    y organizacional.
+</p>
+
 </section>
 
 <hr>
 
 <!-- ================== PROYECTOS =================== -->
 <section id="proyectos">
-<h3>Proyectos por Categoría</h3>
+<h3>Proyectos Desarrollados</h3>
 
 <!-- ==== IoT ==== -->
 <h4 class="mt-4"><i class="bi bi-wifi"></i> IoT</h4>
@@ -183,7 +191,7 @@ h1, h2, h3, p { color: #00eaff; }
     <div class="col-md-6">
         <div class="card proyecto-card p-3">
             <h4 class="proyecto-title">HydroSys</h4>
-            <p>Sistema IoT de monitoreo hídrico con ESP32 + sensores de flujo.</p>
+            <p style="color:white">Sistema IoT de monitoreo hídrico con ESP32 + sensores de flujo.</p>
             <a href="https://github.com/Xander313/HydroSys" target="_blank" class="btn btn-outline-info">Ver</a>
         </div>
     </div>
@@ -197,7 +205,7 @@ h1, h2, h3, p { color: #00eaff; }
     <div class="col-md-6">
         <div class="card proyecto-card p-3">
             <h4 class="proyecto-title">SIGGrupo13</h4>
-            <p>Sistema de información geográfica para análisis territorial.</p>
+            <p style="color:white">Sistema de información geográfica para análisis territorial.</p>
             <a href="https://github.com/Xander313/SIGGrupo13" class="btn btn-outline-info" target="_blank">Ver</a>
         </div>
     </div>
@@ -205,7 +213,7 @@ h1, h2, h3, p { color: #00eaff; }
     <div class="col-md-6">
         <div class="card proyecto-card p-3">
             <h4 class="proyecto-title">Propiedad Intelectual</h4>
-            <p>Gestión de documentos y trámites académicos.</p>
+            <p style="color:white">Gestión de documentos y trámites académicos.</p>
             <a href="https://github.com/Xander313/propiedadIntelectual" class="btn btn-outline-info" target="_blank">Ver</a>
         </div>
     </div>
@@ -219,7 +227,7 @@ h1, h2, h3, p { color: #00eaff; }
     <div class="col-md-6">
         <div class="card proyecto-card p-3">
             <h4 class="proyecto-title">awsCloud</h4>
-            <p>Sistemas desplegados en AWS con arquitectura escalable.</p>
+            <p style="color:white">Sistemas desplegados en AWS con arquitectura escalable.</p>
             <a href="https://github.com/Xander313/awsCloud" class="btn btn-outline-info" target="_blank">Ver</a>
         </div>
     </div>
@@ -233,7 +241,7 @@ h1, h2, h3, p { color: #00eaff; }
     <div class="col-md-6">
         <div class="card proyecto-card p-3">
             <h4 class="proyecto-title">Regresión Logística</h4>
-            <p>Modelo ML aplicado a dataset real de predicciones.</p>
+            <p style="color:white">Modelo ML aplicado a dataset real de predicciones.</p>
             <a href="https://github.com/Xander313/Logistica" class="btn btn-outline-info" target="_blank">Ver</a>
         </div>
     </div>
